--- a/style.css
+++ b/style.css
@@ -1,49 +1,261 @@
+/* COMMON */
 *{
     box-sizing: border-box;
-}
-
-body{
-    background-image:url(images/cover.png);
-}
-#nav{
+    text-decoration: none;
+    color: black;
     text-align: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-#logo{
-    width: 200px;
+.inner{
+    width: 1100px;
+    margin: 0 auto;
 }
 
-#menu {
+.off{
+    display: none;
+}
+
+
+
+
+/* HEADER */
+header{
+    width: 100%;
+    height: 150px;
+    margin: 0 auto;
+    border-bottom: 1px black solid;
+    background-color: white;
+}
+
+
+header .logo{
+    height: 150px;
+    margin: 0 auto;
+    display: block;
+}
+
+
+/* NOTICE */
+.notice{
+    width: 100%;
     display: flex;
-    flex-direction:row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    
+    height: 30px;
+    line-height: 30px;
+    position: relative;
 }
 
-#menu > *{
-    width: 500px;
-    height: 500px;   
+.notice .notice__left {
+    width: 60%;
+    height: 30px;
+    background-color: #333;
+    display: flex; 
+    justify-content:space-around;
+    vertical-align: middle;
+    overflow: hidden;
 }
 
-#sec1{
+.notice .notice__left .bold {
+    color: white;
+    font-weight: 700;
+    position: absolute;
+    left: 80px;
+}
+
+
+.notice .swiper {
+    height: 120px;
+    color: white;
+    position: relative;;
+}
+
+.notice .swiper .swiper-wrapper .swiper-slide{
+    color: white;
+    margin-left: 40px;
+  }
+
+.notice .notice__right{
+    width: 40%;
+    position: absolute;
+    right: 0;
+    display: flex;
+    justify-content:center;
+    vertical-align: middle;
+    line-height: 30px;
+    background-color: #F4F4F4;
+}
+
+.notice .notice__right .material-icons{
+    margin-top: 2.5px;
+    margin-left: 20px;
+    cursor: pointer;
+    right: 200px;
+    position: absolute;
+}
+
+
+
+/* HELP */
+.help{
+    height: 0px;
+    transition: 2s;
+    position: relative;
+    overflow: hidden;
+}
+
+.help.display{
+    height: 425px;
+    background-color: #FAE100;
+}
+
+.help h1{
+    position: absolute;
+    font-family: 'Noto Sans KR', sans-serif;
+    left: -200px;
+    transition: 3s;
+    opacity: 0;
+    font-size: 60px;
+    background-color: rgba(255,255,255,0);
+    font-weight: 700;
+}
+.help .mainText{
+    top:40px;
+}
+
+.help .subText{
+    top:110px;  
+}
+
+.help h1.active{
+    left: 50px;
+    opacity: 1;
+}
+
+.help .swiper {
+    height: 150px;
+    background-color: white;
+    top:250px;
+}
+
+.help .swiper .swiper-wrapper .swiper-slide{
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    margin: auto 0;   
+  }
+
+.help .logo{
+    width: 300px;
+    position: absolute;
+    right: 100px;
+    top:0px;
+    opacity: 0;
+    transition: 3s;
+    background-color: rgba(255,255,255,0);
+}
+
+.help .logo.active{
+    opacity: 1;
+    right: 200px;
+}
+
+/* MAIN */
+.main{
+    display: flex;
+}
+
+/* MENU */
+.active{
+    background-color: #F4F4F4;
+}
+.menu{
+    width: 140px;
+    height: 429px;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;    
-    justify-content:space-between
+    justify-content:space-between;  
 }
 
-#sec1 > *{
-    height: 230px;
+.menu .menuList{
+    height: calc(429px / 5);
+    position: relative;
 }
 
-#sec2{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;    
-    justify-content:space-between
+.menu .menuList:hover{
+    background-color: #F4F4F4;
 }
 
-#sec2 > *{
-    width: 167px;
+.menu .menuList div{
+    margin-top: 10px;
+}
+
+
+.menu .menuList div h1{
+    margin-top: 10px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 15px;
+}
+
+
+/* BOARD */
+.board{
+    width: 1280px;
+    height: 429px;
+    background-color: white;
+}
+.board .element{
+    width: 0px;
+    height: 429px;
+    transition: 2s;
+    overflow: hidden;
+    position: absolute;
+}
+
+.board .element.select{
+    width: 1280px;
+    height: 429px;
+    background-color: #F4F4F4;
+    transition: 2s;
+    display: block;
+}
+
+.board .element.off{
+    display: none;
+}
+
+.board .element .material-icons{
+    cursor: pointer;
+    top: 20px;
+    right: 20px;
+    position: absolute;
+}
+
+
+
+/* COUNSEL */
+.counsel{   
+    position: fixed;
+    right: 50px;
+    bottom: 30px;
+    width: 150px;
+    height: 40px;
+    background-color: #FAE100;    
+    border-radius: 30px;
+    cursor: pointer;
+    color: #3C1E1E;
+}
+
+
+.counsel img{
+    height: 40px;
+    position: absolute;
+    left: 0;
+}
+
+.counsel h1{
+    font-size: 20px;
+    margin-top: 6px;
+    margin-left: 20px;
 }
